# py-aiger

./: MANIFEST.in  setup.cfg
aiger/: aig.py  common.py  parser.py
