[metadata]
name = py-aiger
long_description = file: README.md
long_description_content_type = text/markdown
version = 6.2.3
url = https://github.com/mvcisback/py-aiger
description = A python library for manipulating sequential and-inverter gates.
author = Marcell Vazquez-Chanlatte
author_email = marcell.vc@eecs.berkeley.edu
license = MIT

[options]
packages = aiger
install_requires =
    attrs>=23
    bidict>=0.22.0,<0.23.0
    funcy>=1.12,<2.0
    pyrsistent>=0.19.0,<0.20.0
    sortedcontainers>=2.3.0,<3.0.0
python_requires = >=3.7,<4.0

[options.extras_require]
dev =
    hypothesis_cfg @ git+https://github.com/mvcisback/hypothesis-cfg.git
    hypothesis>=6,<7
    pytest-xdist>=3,<4
    py-aiger-ptltl>=3.1.0,<4.0.0
    parsimonious>=0.10,<1.00
